--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pangolindex/sdk",
+  "name": "@m5k/sdk",
   "license": "MIT",
   "version": "4.4.0-rc.1",
   "description": "🛠 An SDK for building applications on top of Pangolin.",
@@ -8,7 +8,7 @@
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/pangolindex/sdk",
+  "repository": "https://github.com/m5k/sdk",
   "keywords": [
     "pangolin",
     "avalanche"
