--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "dev:watch": "chokidar \"dist/**/*\" --silent -c \"yalc push\"",
     "dev": "concurrently -n p: \"npm:dev:*\"",
     "test": "tsdx test",
-    "prepublishOnly": "tsdx build",
-    "prepare": "husky install"
+    "prepublishOnly": "tsdx build"
   },
   "dependencies": {
     "big.js": "^5.2.2",
@@ -54,8 +53,7 @@
     "babel-plugin-transform-jsbi-to-bigint": "^1.3.1",
     "concurrently": "^7.2.1",
     "tsdx": "^0.12.3",
-    "yalc": "^1.0.0-pre.53",
-    "husky": "^8.0.0"
+    "yalc": "^1.0.0-pre.53"
   },
   "engines": {
     "node": ">=10"
