--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@m5k/sdk",
+  "name": "@pangolindex/sdk",
   "license": "MIT",
-  "version": "4.4.0-rc.2",
+  "version": "4.4.0-rc.1",
   "description": "🛠 An SDK for building applications on top of Pangolin.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/m5k/sdk",
+  "repository": "https://github.com/pangolindex/sdk",
   "keywords": [
     "pangolin",
     "avalanche"
@@ -23,7 +23,8 @@
     "dev:watch": "chokidar \"dist/**/*\" --silent -c \"yalc push\"",
     "dev": "concurrently -n p: \"npm:dev:*\"",
     "test": "tsdx test",
-    "prepublishOnly": "tsdx build"
+    "prepublishOnly": "tsdx build",
+    "prepare": "husky install"
   },
   "dependencies": {
     "big.js": "^5.2.2",
@@ -53,7 +54,8 @@
     "babel-plugin-transform-jsbi-to-bigint": "^1.3.1",
     "concurrently": "^7.2.1",
     "tsdx": "^0.12.3",
-    "yalc": "^1.0.0-pre.53"
+    "yalc": "^1.0.0-pre.53",
+    "husky": "^8.0.0"
   },
   "engines": {
     "node": ">=10"
